force-app/main/default/objects/CustomObj__c/fields/Actual_Clarificastion_start_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Clarificastion_start_date__c</fullName>
    <label>Actual Clarificastion start date</label>
    <type>DateTime</type>
</CustomField>