force-app/main/default/objects/CustomObj__c/fields/Clarification__c.field-meta.xml
<CustomField>
    <fullName>Clarification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clarification</label>
    <type>Checkbox</type>
</CustomField>