force-app/main/default/objects/CustomObj__c/fields/Clarification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Clarification_Start_Date__c</fullName>
    <label>Clarification: Start Date</label>
    <type>DateTime</type>
</CustomField>