force-app/main/default/objects/CustomObj__c/fields/Classic_URL__c.field-meta.xml
<CustomField>
    <fullName>Classic_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classic URL</label>
    <type>Text</type>
</CustomField>