force-app/main/default/objects/CustomObj__c/fields/Current_days_in_Clarification__c.field-meta.xml
<CustomField>
    <fullName>Current_days_in_Clarification__c</fullName>
    <formula>IF( Clarification__c = TRUE, NOW() -  Clarification_Start_Date__c + 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current days in Clarification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>