force-app/main/default/objects/CustomObj__c/fields/CustomObj__c.field-meta.xml
<CustomField>
    <fullName>CustomObj__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>my child</description>
    <label>CustomObj</label>
    <referenceTo>CustomObj__c</referenceTo>
    <relationshipLabel>CustomObj</relationshipLabel>
    <relationshipName>CustomObj</relationshipName>
    <type>Lookup</type>
</CustomField>