force-app/main/default/objects/CustomObj__c/fields/date_picklist_changed__c.field-meta.xml
<CustomField>
    <fullName>date_picklist_changed__c</fullName>
    <label>date picklist changed from one</label>
    <type>DateTime</type>
</CustomField>