force-app/main/default/objects/CustomObj__c/fields/daylightESTendson__c.field-meta.xml
<CustomField>
    <fullName>daylightESTendson__c</fullName>
    <formula>7- CASE( MOD(DATE ( YEAR (DATEVALUE(  Clarification_Start_Date__c  )),11,1) - DATE (1900,1,7),7) ,0,7,MOD(DATE ( YEAR (DATEVALUE(  Clarification_Start_Date__c  )),11,1) - DATE (1900,1,7),7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>daylightESTendson</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>