force-app/main/default/objects/CustomObj__c/fields/Email_to_send__c.field-meta.xml
<CustomField>
    <fullName>Email_to_send__c</fullName>
    <label>Email to send</label>
    <type>Email</type>
</CustomField>