force-app/main/default/objects/CustomObj__c/fields/Exp_sub_date__c.field-meta.xml
<CustomField>
    <fullName>Exp_sub_date__c</fullName>
    <formula>DATETIMEVALUE(
TEXT(  Today__c   + 1)
+
&quot; &quot; +
&apos;04:01:00&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp sub date</label>
    <type>DateTime</type>
</CustomField>