force-app/main/default/objects/CustomObj__c/fields/myu_picklst__c.field-meta.xml
<CustomField>
    <fullName>myu_picklst__c</fullName>
    <label>myu picklst</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
                <default>true</default>
                <label>one</label>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>