force-app/main/default/objects/CustomObj__c/fields/Now__c.field-meta.xml
<CustomField>
    <fullName>Now__c</fullName>
    <formula>NOW() - 0.208333 - 0.208333</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Now</label>
    <type>DateTime</type>
</CustomField>