force-app/main/default/objects/CustomObj__c/fields/Previous_days_in_Clarification__c.field-meta.xml
<CustomField>
    <fullName>Previous_days_in_Clarification__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous days in Clarification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>