force-app/main/default/objects/CustomObj__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <formula>User_2__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>time</label>
    <type>Text</type>
</CustomField>