force-app/main/default/objects/CustomObj__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today</label>
    <type>Date</type>
</CustomField>