force-app/main/default/objects/CustomObj__c/fields/Total_days_in_Clarification__c.field-meta.xml
<CustomField>
    <fullName>Total_days_in_Clarification__c</fullName>
    <formula>IF( Clarification__c = TRUE,  Previous_days_in_Clarification__c +  Current_days_in_Clarification__c,  Previous_days_in_Clarification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total days in Clarification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>